section 3 completed - still some issues with flexbox and alignments

--- a/style.css
+++ b/style.css
@@ -21,15 +21,18 @@ h2 {
   text-align: center;
   margin-top: 1em;
   padding: 0 1.5em;
-  background-color: rgba(255,204,53,.4);
+  background-color: rgba(255, 204, 53, 0.4);
   font-style: italic;
-  transform: skew(9deg,0deg);
+  transform: skew(9deg, 0deg);
 }
 
 h3 {
-  font-size: 1.5em;
-  text-align: center;
+  font-size: 1.2em;
+  color: #ed1c24;
+  font-weight: 900;
+  text-align: left;
   line-height: 1em;
+  margin-top: 1em;
 }
 
 header > div {
@@ -169,4 +172,40 @@ form button {
 
 #open-source article {
   width: 60%;
+}
+
+#benefits {
+  padding: 0 15px;
+}
+
+#benefits div {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 80%;
+}
+
+#benefits img {
+  width: 25px;
+}
+#benefits .container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 80%;
+  text-align: left;
+  margin: 3em 0.25em;
+}
+#benefits button {
+  cursor: pointer;
+  font-size: 1.25em;
+  display: flex;
+  margin: 0 auto;
+  padding: 1em 5em;
+  border: none;
+  background-color: black;
+  color: white;
+  -webkit-box-shadow: 8px 8px 0 rgba(128, 83, 35, 0.2);
+  -moz-box-shadow: 8px 8px 0 rgba(128, 83, 35, 0.2);
+  box-shadow: 8px 8px 0 rgba(128, 83, 35, 0.2);
 }
